# dl_project_1

./: .gitignore  Contest_DL_2025.ipynb  PromptEngBT7817.ipynb  README.md  final.ipynb  herry_dl_project_test.ipynb  pyproject.toml  submission.csv  terry_progress_2025.10.25.ipynb  terry_progress_2025.10.25_acc7817.ipynb  terry_progress_2025.10.25_acc8067.ipynb  terry_progress_2025.10.26_acc8250.ipynb  terry_progress_2025.10.28_acc8348_logits_parse  terry_progress_2025.10.28_acc8348_logits_parse.ipynb  terry_progress_2025.10.28_acc8499.ipynb  terry_progress_2025.10.28_acc8521.ipynb  terry_progress_2025.10.29_acc8616.ipynb  validation_errors.csv
